<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:orientation="vertical"
    android:background="@drawable/gradiuns">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Help"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="25dp"
                android:layout_margin="20dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/discussionillustration" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_help_center_24"
                        tools:src="@tools:sample/avatars" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_phone_24"
                        tools:src="@tools:sample/avatars" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_ugc_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/Inquiry"
                            android:layout_marginLeft="60dp"/>

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_weight="1"
                            android:text="Connect Us"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/FAQ"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_home_24"
                android:layout_marginTop="50dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>